force-app/main/default/objects/Git__c/Git__c.object-meta.xml
<CustomObject>
    <label>Git</label>
    <nameField>
        <label>Git Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>