force-app/main/default/objects/Git__c/fields/Components__c.field-meta.xml
<CustomField>
    <fullName>Components__c</fullName>
    <label>Components</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Actions</fullName>
            </value>
            <value>
                <fullName>Branches</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>