force-app/main/default/objects/Git__c/fields/flow__c.field-meta.xml
<CustomField>
    <fullName>flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>flow</label>
    <type>Checkbox</type>
</CustomField>