force-app/main/default/objects/Git__c/fields/Flow_Check__c.field-meta.xml
<CustomField>
    <fullName>Flow_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Check</label>
    <type>Checkbox</type>
</CustomField>