force-app/main/default/objects/Git__c/fields/PR__c.field-meta.xml
<CustomField>
    <fullName>PR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PR</label>
    <type>Checkbox</type>
</CustomField>