force-app/main/default/objects/Git__c/fields/Sync_Check__c.field-meta.xml
<CustomField>
    <fullName>Sync_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Check</label>
    <type>Checkbox</type>
</CustomField>